--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         }
 
         .header {
-            padding: 0 20px 12px;
+            padding: 6px 20px;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -76,6 +76,10 @@
         .header a {
             color: var(--second-color);
             text-decoration: none;
+        }
+
+        .nav-contacts .contacts_icons {
+            display: none;
         }
 
         footer {
@@ -95,6 +99,10 @@
             clip-path: polygon(0 0, 100% 40px, 100% 100%, 0 calc(100% - 40px));
         } */
 
+        .section__white {
+            padding-bottom: 42px;
+        }
+
         .section__white .content {
             background-color: var(--second-color);
         }
@@ -107,6 +115,10 @@
             clip-path: none;
             min-height: auto;
             margin-bottom: 10px;
+        }
+
+        .section__features .content {
+            margin-bottom: -94px;
         }
 
         .content {
@@ -539,7 +551,6 @@
 
 
 
-
         @media screen and (min-width: 768px) {
             .animate-once {
                 opacity: 0;
@@ -548,6 +559,34 @@
             .animate-once.visible {
                 animation-name: fadeInUp;
                 animation-fill-mode: forwards;
+            }
+
+            .nav-contacts {
+                display: flex;
+            }
+
+            .nav-contacts .contacts_icons {
+                margin: 0;
+                display: flex;
+            }
+
+            .nav-contacts .contacts_icon img {
+                width: 100%;
+                filter: grayscale(1) brightness(0) invert(1);
+            }
+
+            .nav-contacts .contacts_icon {
+                width: 36px;
+                margin-right: 12px;
+            }
+
+            .nav-contacts .contacts_icon a {
+                font-size: 0;
+                display: block;
+            }
+
+            .header {
+                padding: 10px 20px;
             }
 
             .logo {
@@ -681,6 +720,17 @@
                 max-width: calc(50% - 40px);
                 width: 480px;
                 margin-bottom: 0;
+                counter-increment: process_item;
+            }
+
+            .process_item::before {
+                content: counter(process_item);
+                display: block;
+                position: absolute;
+                right: 10px;
+                top: 10px;
+                font-size: 28px;
+                opacity: 0.8;
             }
 
             .map {
@@ -713,6 +763,10 @@
             .section .photo.photo__servis_sboku {
                 clip-path: polygon(0 0, 100% 40px, 100% 100%, 0 100%);
             }
+
+            .section__features {
+                padding-bottom: 84px;
+            }
         }
     </style>
 </head>
@@ -722,14 +776,43 @@
     <header class="header">
         <div class="img logo">
             <picture>
-                <source media="(max-width: 844px)" srcset="./img/logo.png" />
-                <source media="(min-width: 845px)" srcset="./img/logo_big.png" />
-                <img src="./img/logo.png" alt="logo" />
+                <source media="(max-width: 844px)" srcset="./img/logo.svg" />
+                <source media="(min-width: 845px)" srcset="./img/logo.svg" />
+                <img src="./img/logo.svg" alt="logo" />
             </picture>
         </div>
-        <div class="links">
-            <a href="tel:+995591545105">+995 591 545 105</a>
-            <a target="_blank" href="https://maps.app.goo.gl/8kb6Kq7EQt6SVVVCA">68 Airport Hwy, Batumi</a>
+        <div class="nav-contacts">
+            <ul class="contacts_icons">
+                <li class="contacts_icon">
+                    <a href="https://www.instagram.com/sto_batumi/">
+                        <img src="./img/instagram.svg" alt="instagram">
+                        instagram
+                    </a>
+                </li>
+
+                <li class="contacts_icon">
+                    <a href="https://wa.me/995591545105">
+                        <img src="./img/whatsapp.svg" alt="whatsapp">
+                        whatsapp
+                    </a>
+                </li>
+                <li class="contacts_icon">
+                    <a href="https://t.me/georgia_like_auto_batumi">
+                        <img src="./img/telegram.svg" alt="telegram">
+                        telegram
+                    </a>
+                </li>
+                <li class="contacts_icon">
+                    <a href="https://www.facebook.com/sto.batumi">
+                        <img src="./img/facebook.svg" alt="facebook">
+                        facebook
+                    </a>
+                </li>
+            </ul>
+            <div class="links">
+                <a href="tel:+995591545105">+995 591 545 105</a>
+                <a target="_blank" href="https://maps.app.goo.gl/8kb6Kq7EQt6SVVVCA">68 Airport Hwy, Batumi</a>
+            </div>
         </div>
     </header>
     <div class="section section__main section__white">
@@ -801,7 +884,7 @@
         <div class="img photo photo__korobka_polovina">
             <img src="./img/коробка_половина.jpg" alt="коробка лады" />
         </div>
-        <div class="content content_wide animate-once">
+        <div class="content content_wide animate-once" data-delay="0.4s">
             <h2>Услуги и специализация</h2>
             <ul class="list">
                 <li class="list_item">
@@ -863,7 +946,7 @@
         <div class="img photo photo__kluchi_na_stene">
             <img src="./img/ключи_на_стене.jpg" alt="ключи_на_стене" />
         </div>
-        <div class="content animate-once">
+        <div class="content animate-once" data-delay="0.4s">
             <h2>Ваш автомобиль в надежных руках</h2>
             <ul class="list list__big">
                 <li class="list_item">Всегда можем <b>показать</b> и рассказать, что происходит с автомобилем.
@@ -881,7 +964,7 @@
         <div class="img photo photo__bolgarka">
             <img src="./img/болгарка_глушитель.jpg" alt="болгарка глушитель" />
         </div>
-        <div class="content animate-once">
+        <div class="content animate-once" data-delay="0.4s">
             <h2>Кейсы и отзывы клиентов</h2>
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
@@ -984,7 +1067,7 @@
         <div class="img photo photo__instrumenti_na_stole">
             <img src="./img/двигатель.jpg" alt="инструменты_на_столе" />
         </div>
-        <div class="content content_wide animate-once">
+        <div class="content content_wide animate-once" data-delay="0.4s">
             <h2>Как мы работаем</h2>
             <div class="process">
                 <div class="process_item" id="id0">
@@ -1072,7 +1155,7 @@
         <div class="img photo photo__svarka">
             <img src="./img/сварка.jpg" alt="сварка" />
         </div>
-        <div class="content content_wide animate-once">
+        <div class="content content_wide animate-once" data-delay="0.4s">
 
             <h2>Технические возможности и оборудование</h2>
             <ul class="list list_odd">
@@ -1124,7 +1207,7 @@
         <div class="img photo photo__ruka">
             <img src="./img/рука_с_визиткой.jpg" alt="сварка" />
         </div>
-        <div class="content content_wide animate-once">
+        <div class="content content_wide animate-once" data-delay="0.4s">
             <h2>Контакты</h2>
             <div class="contacts">
 
