Обновил команду i18n для поддержки HTML, добавил атрибуты локализации в index.html и улучшил структуру разметки для лучшей читаемости.

--- a/i18n/en/src/index.html
+++ b/i18n/en/src/index.html
@@ -66,7 +66,9 @@
         <div class="content animate-once">
             <h1>
                 <span>Auto Service</span>
-                <div class="bold">Georgia Like Auto</div>
+                <div class="bold">
+                    <span>Georgia Like Auto</span>
+                </div>
                 <span>Multibrand</span>
             </h1>
 
@@ -77,25 +79,33 @@
                     <div class="number_value counter" data-start="0" data-duration="3000">
                         7000+
                     </div>
-                    <div class="number_text">successful repairs</div>
+                    <div class="number_text">
+                        <span>successful repairs</span>
+                    </div>
                 </li>
                 <li class="list_item number_cnt">
                     <div class="number_value counter" data-start="0" data-duration="2000">
                         15 лет
                     </div>
-                    <div class="number_text">average experience of masters</div>
+                    <div class="number_text">
+                        <span>average experience of masters</span>
+                    </div>
                 </li>
                 <li class="list_item number_cnt">
                     <div class="number_value counter" data-start="0" data-duration="2000">
                         3 года
                     </div>
-                    <div class="number_text">in Batumi</div>
+                    <div class="number_text">
+                        <span>in Batumi</span>
+                    </div>
                 </li>
                 <li class="list_item number_cnt">
                     <div class="number_value counter" data-start="0" data-duration="2000">
                         7 дней
                     </div>
-                    <div class="number_text">per week, from 10 to 19</div>
+                    <div class="number_text">
+                        <span>7 days a week, from 10 AM to 7 PM</span>
+                    </div>
                 </li>
 
 
@@ -117,16 +127,18 @@
             <img src="..\../../img/инструменты.jpg" alt="запчасти">
         </div>
         <div class="content animate-once">
-            <h2>Sales and Discounts</h2>
+            <h2>
+                <span>Promotions and Discounts</span>
+            </h2>
             <ul class="list list_wide">
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/pig.svg" alt>
                     <span>Cashback Cards</span>
-                    <div class="process_text__small" data-t-params="{"percent": 7}">Save up to {percent}% on works and parts with a loyalty card</div>
+                    <div class="process_text__small">Save up to <b>7%</b> on works and spare parts with a loyalty card</div>
                 </li>
                 <li class="list_item list_item_sale">
                     <img class="list_item__img" src="..\../../img/radiator.svg" alt>
-                    <span data-t-params="{"percent": 10}">All May {percent}% discount</span>
+                    <span>All <b>May</b> discount <b>10%</b></span>
                     <div class="process_text__small">on all cooling system works, thermostats, pumps, radiators and antifreeze</div>
                 </li>
             </ul>
@@ -143,22 +155,49 @@
         <div class="content content_wide animate-once" data-delay="0.4s">
             <h2>Services and Specialization</h2>
             <ul class="list list_wide">
-                <li class="list_item">Technical Maintenance ☆</li>
-                <li class="list_item">Diagnostics ☆</li>
-                <li class="list_item">Chassis ☆</li>
-                <li class="list_item">Engine ☆</li>
+                <li class="list_item">Maintenance ☆</li>
+                <li class="list_item">
+                    <img class="list_item__img" src="..\../../img/car-repair.svg" alt>
+                    <span>Diagnostics ☆</span>
+                </li>
+                <li class="list_item">
+                    <img class="list_item__img" src="..\../../img/chassis.svg" alt>
+                    <span>Chassis ☆</span>
+                </li>
+                <li class="list_item">
+                    <img class="list_item__img" src="..\../../img/motor.svg" alt>
+                    <span>Engine ☆</span>
+                </li>
 
-                <li class="list_item">Brakes ☆</li>
-                <li class="list_item">Electrical</li>
-                <li class="list_item">Metal Welding</li>
-                <li class="list_item">Manual Transmission</li>
-                <li class="list_item">Leak Repair</li>
-                <li class="list_item">Interior Assembly/Disassembly</li>
+                <li class="list_item">
+                    <img class="list_item__img" src="..\../../img/brake-disk.svg" alt>
+                    <span>Brakes ☆</span>
+                </li>
+                <li class="list_item">
+                    <img class="list_item__img" src="..\../../img/electrican.svg" alt>
+                    <span>Electrical</span>
+                </li>
+                <li class="list_item">
+                    <img class="list_item__img" src="..\../../img/welding.svg" alt>
+                    <span>Metal Welding</span>
+                </li>
+                <li class="list_item">
+                    <img class="list_item__img" src="..\../../img/transmission.svg" alt>
+                    <span>Manual Transmission</span>
+                </li>
+                <li class="list_item">
+                    <img class="list_item__img" src="..\../../img/leak.svg" alt>
+                    <span>Leak Repair</span>
+                </li>
+                <li class="list_item">
+                    <img class="list_item__img" src="..\../../img/speedometer.svg" alt>
+                    <span>Interior Assembly/Disassembly</span>
+                </li>
 
             </ul>
-            <h2 class="toggle" data-for="#not">What We Don't Do</h2>
+            <h2 class="toggle" data-for="#not">What We DON'T Do</h2>
             <ul class="list hidden" id="not">
-                <li class="list_item">Automatic Transmission Repair, but we can replace the whole transmission or change oil</li>
+                <li class="list_item">Automatic transmission repair, but we can replace the entire gearbox or change the oil</li>
                 <li class="list_item">Body Repair</li>
                 <li class="list_item">Painting</li>
                 <li class="list_item">Tire Service</li>
@@ -175,12 +214,12 @@
         <div class="content animate-once" data-delay="0.4s">
             <h2>Your Car in Reliable Hands</h2>
             <ul class="list list__big">
-                <li class="list_item">We can always show and explain what's happening with your car.</li>
-                <li class="list_item">We maintain cleanliness, use seat covers, floor mats and more.</li>
-                <li class="list_item">We work by appointment, respecting your and our time.</li>
-                <li class="list_item">We can compile a list, find or order parts and oils.</li>
-                <li class="list_item">We use modern auto service software and special tools.</li>
-                <li class="list_item">We work officially and provide all necessary documents.</li>
+                <li class="list_item">We can always <b>show</b> and explain what's happening with your car.</li>
+                <li class="list_item">We maintain <b>cleanliness</b>, using seat covers, floor mats, and more.</li>
+                <li class="list_item">We work <b>by appointment</b>, respecting your and our time.</li>
+                <li class="list_item">We can compile a list, find or order <b>spare parts</b> and oils.</li>
+                <li class="list_item">We use <b>modern software</b> for auto services and special tools.</li>
+                <li class="list_item">We work <b>officially</b> and provide all necessary documents.</li>
             </ul>
         </div>
     </div>
@@ -298,7 +337,7 @@
                         <img src="..\../../img/send-message-64.png" alt>
                     </div>
                     <div class="process_title">Contact</div>
-                    <div class="process_text">Write to us on social networks or call by phone.</div>
+                    <div class="process_text">Write to us on <b>social networks</b> or call by phone.</div>
                 </div>
                 <div class="process_item" id="id1">
                     <div class="process_img process_img__check">
@@ -425,16 +464,22 @@
             <div class="contacts">
 
                 <div class="contacts_text-cnt">
-                    <div class="contacts_text">Phone:</div>
+                    <div class="contacts_text">
+                        <span>Phone:</span>
+                    </div>
                     <a class="contacts_text bold" href="tel:+995591545105">+995 591 545 105</a>
                 </div>
 
                 <div class="contacts_text-cnt">
-                    <div class="contacts_text">Address:</div>
+                    <div class="contacts_text">
+                        <span>Address:</span>
+                    </div>
                     <a class="contacts_text bold" target="_blank" href="https://maps.app.goo.gl/8kb6Kq7EQt6SVVVCA">68
                         Airport Hwy, Batumi</a>
                 </div>
-                <div class="contacts_text">Working Hours:</div>
+                <div class="contacts_text">
+                    <span>Working hours: <b>Mon-Sun from 10:00 AM to 7:00 PM</b></span>
+                </div>
 
                 <div class="divider"></div>
 
