--- a/i18n/ka/src/index.html
+++ b/i18n/ka/src/index.html
@@ -66,7 +66,9 @@
         <div class="content animate-once">
             <h1>
                 <span>ავტოსერვისი</span>
-                <div class="bold">Georgia Like Auto</div>
+                <div class="bold">
+                    <span>Georgia Like Auto</span>
+                </div>
                 <span>მულტიბრენდი</span>
             </h1>
 
@@ -77,25 +79,33 @@
                     <div class="number_value counter" data-start="0" data-duration="3000">
                         7000+
                     </div>
-                    <div class="number_text">წარმატებული რემონტი</div>
+                    <div class="number_text">
+                        <span>წარმატებული რემონტი</span>
+                    </div>
                 </li>
                 <li class="list_item number_cnt">
                     <div class="number_value counter" data-start="0" data-duration="2000">
                         15 лет
                     </div>
-                    <div class="number_text">მასტერების საშუალო გამოცდილება</div>
+                    <div class="number_text">
+                        <span>მასტერების საშუალო გამოცდილება</span>
+                    </div>
                 </li>
                 <li class="list_item number_cnt">
                     <div class="number_value counter" data-start="0" data-duration="2000">
                         3 года
                     </div>
-                    <div class="number_text">ბათუმში</div>
+                    <div class="number_text">
+                        <span>ბათუმში</span>
+                    </div>
                 </li>
                 <li class="list_item number_cnt">
                     <div class="number_value counter" data-start="0" data-duration="2000">
                         7 дней
                     </div>
-                    <div class="number_text">კვირაში, 10-დან 19-მდე</div>
+                    <div class="number_text">
+                        <span>კვირაში 7 დღე, 10:00-დან 19:00-მდე</span>
+                    </div>
                 </li>
 
 
@@ -117,16 +127,18 @@
             <img src="..\../../img/инструменты.jpg" alt="запчасти">
         </div>
         <div class="content animate-once">
-            <h2>ფასდაკლებები და აქციები</h2>
+            <h2>
+                <span>ფასდაკლებები და აქციები</span>
+            </h2>
             <ul class="list list_wide">
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/pig.svg" alt>
                     <span>ქეშბექის ბარათები</span>
-                    <div class="process_text__small" data-t-params="{"percent": 7}">დაზოგეთ {percent}% სამუშაოებსა და ნაწილებზე ლოიალობის ბარათით</div>
+                    <div class="process_text__small">დაზოგეთ <b>7%</b> სამუშაოებსა და запчастях-ზე მუდმივი მომხმარებლის ბარათით</div>
                 </li>
                 <li class="list_item list_item_sale">
                     <img class="list_item__img" src="..\../../img/radiator.svg" alt>
-                    <span data-t-params="{"percent": 10}">მთელი მაისი {percent}% ფასდაკლება</span>
+                    <span>მთელი <b>მაისი</b> ფასდაკლება <b>10%</b></span>
                     <div class="process_text__small">გაგრილების სისტემის სამუშაოებზე, თერმოსტატებზე, ტუმბოებზე, რადიატორებსა და ანტიფრიზზე</div>
                 </li>
             </ul>
@@ -144,25 +156,52 @@
             <h2>მომსახურება და სპეციალიზაცია</h2>
             <ul class="list list_wide">
                 <li class="list_item">ტექნიკური მომსახურება ☆</li>
-                <li class="list_item">დიაგნოსტიკა ☆</li>
-                <li class="list_item">ქვედა ნაწილი ☆</li>
-                <li class="list_item">ძრავი ☆</li>
+                <li class="list_item">
+                    <img class="list_item__img" src="..\../../img/car-repair.svg" alt>
+                    <span>დიაგნოსტიკა ☆</span>
+                </li>
+                <li class="list_item">
+                    <img class="list_item__img" src="..\../../img/chassis.svg" alt>
+                    <span>ქვედა ნაწილი ☆</span>
+                </li>
+                <li class="list_item">
+                    <img class="list_item__img" src="..\../../img/motor.svg" alt>
+                    <span>ძრავა ☆</span>
+                </li>
 
-                <li class="list_item">მუხრუჭები ☆</li>
-                <li class="list_item">ელექტრიკოსი</li>
-                <li class="list_item">მეტალის შედუღება</li>
-                <li class="list_item">მექანიკური გადაცემათა კოლოფი</li>
-                <li class="list_item">გაჟონვის აღმოფხვრა</li>
-                <li class="list_item">სალონის აწყობა/დაშლა</li>
+                <li class="list_item">
+                    <img class="list_item__img" src="..\../../img/brake-disk.svg" alt>
+                    <span>მუხრუჭები ☆</span>
+                </li>
+                <li class="list_item">
+                    <img class="list_item__img" src="..\../../img/electrican.svg" alt>
+                    <span>ელექტრიკოსი</span>
+                </li>
+                <li class="list_item">
+                    <img class="list_item__img" src="..\../../img/welding.svg" alt>
+                    <span>მეტალის შედუღება</span>
+                </li>
+                <li class="list_item">
+                    <img class="list_item__img" src="..\../../img/transmission.svg" alt>
+                    <span>მექანიკური კოლოფი</span>
+                </li>
+                <li class="list_item">
+                    <img class="list_item__img" src="..\../../img/leak.svg" alt>
+                    <span>გაჟონვის აღმოფხვრა</span>
+                </li>
+                <li class="list_item">
+                    <img class="list_item__img" src="..\../../img/speedometer.svg" alt>
+                    <span>სალონის დემონტაჟი და მონტაჟი</span>
+                </li>
 
             </ul>
             <h2 class="toggle" data-for="#not">რასაც არ ვაკეთებთ</h2>
             <ul class="list hidden" id="not">
-                <li class="list_item">ავტომატური გადაცემათა კოლოფის რემონტი, მაგრამ შეგვიძლია მთლიანად შევცვალოთ ან ზეთი შევცვალოთ</li>
+                <li class="list_item">ავტომატური კოლოფის რემონტი, მაგრამ შეგვიძლია მთლიანად შევცვალოთ ან ზეთი შევცვალოთ</li>
                 <li class="list_item">კუზოვის რემონტი</li>
                 <li class="list_item">ფერწერა</li>
-                <li class="list_item">საბურავების სერვისი</li>
-                <li class="list_item">კონდიციონერის გადაყენება</li>
+                <li class="list_item">შინომონტაჟი</li>
+                <li class="list_item">კონდიციონერის დატენვა</li>
                 <li class="list_item">სხვა</li>
             </ul>
         </div>
@@ -173,14 +212,14 @@
             <img src="..\../../img/ключи_на_стене.jpg" alt="ключи_на_стене">
         </div>
         <div class="content animate-once" data-delay="0.4s">
-            <h2>თქვენი მანქანა საიმედო ხელებში</h2>
+            <h2>თქვენი მანქანა საიმედო ხელებშია</h2>
             <ul class="list list__big">
-                <li class="list_item">ყოველთვის შეგვიძლია ვაჩვენოთ და აგიხსნათ რა ხდება თქვენს მანქანასთან.</li>
-                <li class="list_item">ვიცავთ სისუფთავეს, ვიყენებთ საჯდომის საფარებს, ხალიჩებს და სხვა.</li>
-                <li class="list_item">ვმუშაობთ ჩაწერით, პატივს ვცემთ თქვენს და ჩვენს დროს.</li>
-                <li class="list_item">შეგვიძლია შევადგინოთ სია, ვიპოვოთ ან შევუკვეთოთ ნაწილები და ზეთები.</li>
-                <li class="list_item">ვიყენებთ თანამედროვე ავტოსერვისის პროგრამებს და სპეციალურ ინსტრუმენტებს.</li>
-                <li class="list_item">ვმუშაობთ ოფიციალურად და ვაძლევთ ყველა საჭირო დოკუმენტს.</li>
+                <li class="list_item">ყოველთვის შეგვიძლია <b>ვაჩვენოთ</b> და გავუხსნათ რა ხდება თქვენს მანქანასთან.</li>
+                <li class="list_item">ვიცავთ <b>სისუფთავეს</b>, ვიყენებთ საფარებს, ხალიჩებს და სხვა.</li>
+                <li class="list_item">ვმუშაობთ <b>ჩაწერით</b>, ვზოგავთ თქვენს და ჩვენს დროს.</li>
+                <li class="list_item">შეგვიძლია შევადგინოთ სია, ვიპოვოთ ან შევუკვეთოთ <b>დამხმარე ნაწილები</b> და ზეთები.</li>
+                <li class="list_item">ვიყენებთ <b>თანამედროვე პროგრამებს</b> ავტოსერვისებისთვის და სპეციალურ ინსტრუმენტებს.</li>
+                <li class="list_item">ვმუშაობთ <b>ოფიციალურად</b> და ვაძლევთ ყველა საჭირო დოკუმენტს.</li>
             </ul>
         </div>
     </div>
@@ -189,7 +228,7 @@
             <img src="..\../../img/болгарка_глушитель.jpg" alt="болгарка глушитель">
         </div>
         <div class="content animate-once" data-delay="0.4s">
-            <h2>შემთხვევები და მომხმარებელთა მიმოხილვები</h2>
+            <h2>შემთხვევები და მომხმარებელთა გამოხმაურებები</h2>
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
@@ -298,7 +337,7 @@
                         <img src="..\../../img/send-message-64.png" alt>
                     </div>
                     <div class="process_title">კონტაქტი</div>
-                    <div class="process_text">მოგვწერეთ სოციალურ ქსელებში ან დაგვირეკეთ.</div>
+                    <div class="process_text">დაგვიწერეთ <b>სოციალურ ქსელებში</b> ან დაგვირეკეთ.</div>
                 </div>
                 <div class="process_item" id="id1">
                     <div class="process_img process_img__check">
@@ -425,16 +464,22 @@
             <div class="contacts">
 
                 <div class="contacts_text-cnt">
-                    <div class="contacts_text">ტელეფონი:</div>
+                    <div class="contacts_text">
+                        <span>ტელეფონი:</span>
+                    </div>
                     <a class="contacts_text bold" href="tel:+995591545105">+995 591 545 105</a>
                 </div>
 
                 <div class="contacts_text-cnt">
-                    <div class="contacts_text">მისამართი:</div>
+                    <div class="contacts_text">
+                        <span>მისამართი:</span>
+                    </div>
                     <a class="contacts_text bold" target="_blank" href="https://maps.app.goo.gl/8kb6Kq7EQt6SVVVCA">68
                         Airport Hwy, Batumi</a>
                 </div>
-                <div class="contacts_text">სამუშაო საათები:</div>
+                <div class="contacts_text">
+                    <span>სამუშაო საათები: <b>ორშ-კვირა 10:00-დან 19:00-მდე</b></span>
+                </div>
 
                 <div class="divider"></div>
 
