--- a/i18n/src/index.html
+++ b/i18n/src/index.html
@@ -66,7 +66,9 @@
         <div class="content animate-once">
             <h1>
                 <span>Автосервис</span>
-                <div class="bold">Georgia Like Auto</div>
+                <div class="bold">
+                    <span>Georgia Like Auto</span>
+                </div>
                 <span>Мультибренд</span>
             </h1>
 
@@ -77,25 +79,33 @@
                     <div class="number_value counter" data-start="0" data-duration="3000">
                         7000+
                     </div>
-                    <div class="number_text">успешных ремонтов</div>
+                    <div class="number_text">
+                        <span>успешных ремонтов</span>
+                    </div>
                 </li>
                 <li class="list_item number_cnt">
                     <div class="number_value counter" data-start="0" data-duration="2000">
                         15 лет
                     </div>
-                    <div class="number_text">средний стаж мастеров</div>
+                    <div class="number_text">
+                        <span>средний стаж мастеров</span>
+                    </div>
                 </li>
                 <li class="list_item number_cnt">
                     <div class="number_value counter" data-start="0" data-duration="2000">
                         3 года
                     </div>
-                    <div class="number_text">в Батуми</div>
+                    <div class="number_text">
+                        <span>в Батуми</span>
+                    </div>
                 </li>
                 <li class="list_item number_cnt">
                     <div class="number_value counter" data-start="0" data-duration="2000">
                         7 дней
                     </div>
-                    <div class="number_text">в неделю, с 10 до 19</div>
+                    <div class="number_text">
+                        <span>в неделю, с 10 до 19</span>
+                    </div>
                 </li>
 
 
@@ -117,16 +127,18 @@
             <img src="../../img/инструменты.jpg" alt="запчасти">
         </div>
         <div class="content animate-once">
-            <h2>Акции и скидки</h2>
+            <h2>
+                <span>Акции и скидки</span>
+            </h2>
             <ul class="list list_wide">
                 <li class="list_item">
                     <img class="list_item__img" src="../../img/pig.svg" alt>
                     <span>Карты кэшбека</span>
-                    <div class="process_text__small" data-t-params="{"percent": 7}">Экономьте до {percent}% на работах и запчастях с картой постоянного покупателя</div>
+                    <div class="process_text__small">Экономьте до <b>7%</b> на работах и запчастях с картой постоянного покупателя</div>
                 </li>
                 <li class="list_item list_item_sale">
                     <img class="list_item__img" src="../../img/radiator.svg" alt>
-                    <span data-t-params="{"percent": 10}">Весь Май скидка {percent}%</span>
+                    <span>Весь <b>Май</b> скидка <b>10%</b></span>
                     <div class="process_text__small">на все работы по системе охлаждения, термостаты, помпы, радиаторы и антифриз</div>
                 </li>
             </ul>
@@ -144,16 +156,43 @@
             <h2>Услуги и специализация</h2>
             <ul class="list list_wide">
                 <li class="list_item">Техническое обслуживание ☆</li>
-                <li class="list_item">Диагностика ☆</li>
-                <li class="list_item">Ходовая ☆</li>
-                <li class="list_item">Двигатель ☆</li>
+                <li class="list_item">
+                    <img class="list_item__img" src="../../img/car-repair.svg" alt>
+                    <span>Диагностика ☆</span>
+                </li>
+                <li class="list_item">
+                    <img class="list_item__img" src="../../img/chassis.svg" alt>
+                    <span>Ходовая ☆</span>
+                </li>
+                <li class="list_item">
+                    <img class="list_item__img" src="../../img/motor.svg" alt>
+                    <span>Двигатель ☆</span>
+                </li>
 
-                <li class="list_item">Тормоза ☆</li>
-                <li class="list_item">Электрик</li>
-                <li class="list_item">Сварка металла</li>
-                <li class="list_item">МКПП</li>
-                <li class="list_item">Устранение течей</li>
-                <li class="list_item">Разбор и сбор салона</li>
+                <li class="list_item">
+                    <img class="list_item__img" src="../../img/brake-disk.svg" alt>
+                    <span>Тормоза ☆</span>
+                </li>
+                <li class="list_item">
+                    <img class="list_item__img" src="../../img/electrican.svg" alt>
+                    <span>Электрик</span>
+                </li>
+                <li class="list_item">
+                    <img class="list_item__img" src="../../img/welding.svg" alt>
+                    <span>Сварка металла</span>
+                </li>
+                <li class="list_item">
+                    <img class="list_item__img" src="../../img/transmission.svg" alt>
+                    <span>МКПП</span>
+                </li>
+                <li class="list_item">
+                    <img class="list_item__img" src="../../img/leak.svg" alt>
+                    <span>Устранение течей</span>
+                </li>
+                <li class="list_item">
+                    <img class="list_item__img" src="../../img/speedometer.svg" alt>
+                    <span>Разбор и сбор салона</span>
+                </li>
 
             </ul>
             <h2 class="toggle" data-for="#not">Чем мы НЕ занимаемся</h2>
@@ -175,12 +214,12 @@
         <div class="content animate-once" data-delay="0.4s">
             <h2>Ваш автомобиль в надежных руках</h2>
             <ul class="list list__big">
-                <li class="list_item">Всегда можем показать и рассказать, что происходит с автомобилем.</li>
-                <li class="list_item">Соблюдаем чистоту, используем накидки на сидения, коврики и не только.</li>
-                <li class="list_item">Работаем по записи, бережём своё и Ваше время.</li>
-                <li class="list_item">Можем сами составить список, найти или заказать запчасти и масла.</li>
-                <li class="list_item">Используем современное ПО для автосервисов и специнструменты.</li>
-                <li class="list_item">Работаем официально и предоставляем все необходимые документы.</li>
+                <li class="list_item">Всегда можем <b>показать</b> и рассказать, что происходит с автомобилем.</li>
+                <li class="list_item">Соблюдаем <b>чистоту</b>, используем накидки на сидения, коврики и не только.</li>
+                <li class="list_item">Работаем <b>по записи</b>, бережём своё и Ваше время.</li>
+                <li class="list_item">Можем сами составить список, найти или заказать <b>запчасти</b> и масла.</li>
+                <li class="list_item">Используем <b>современное ПО</b> для автосервисов и специнструменты.</li>
+                <li class="list_item">Работаем <b>официально</b> и предоставляем все необходимые документы.</li>
             </ul>
         </div>
     </div>
@@ -298,7 +337,7 @@
                         <img src="../../img/send-message-64.png" alt>
                     </div>
                     <div class="process_title">Обращение</div>
-                    <div class="process_text">Пишите нам соц. сети или звоните по телефону.</div>
+                    <div class="process_text">Пишите нам <b>соц. сети</b> или звоните по телефону.</div>
                 </div>
                 <div class="process_item" id="id1">
                     <div class="process_img process_img__check">
@@ -425,16 +464,22 @@
             <div class="contacts">
 
                 <div class="contacts_text-cnt">
-                    <div class="contacts_text">Телефон:</div>
+                    <div class="contacts_text">
+                        <span>Телефон:</span>
+                    </div>
                     <a class="contacts_text bold" href="tel:+995591545105">+995 591 545 105</a>
                 </div>
 
                 <div class="contacts_text-cnt">
-                    <div class="contacts_text">Адрес:</div>
+                    <div class="contacts_text">
+                        <span>Адрес:</span>
+                    </div>
                     <a class="contacts_text bold" target="_blank" href="https://maps.app.goo.gl/8kb6Kq7EQt6SVVVCA">68
                         Airport Hwy, Batumi</a>
                 </div>
-                <div class="contacts_text">График работы:</div>
+                <div class="contacts_text">
+                    <span>График работы: <b>пн-вс с 10:00 до 19:00</b></span>
+                </div>
 
                 <div class="divider"></div>
 
